Correcting item listing overflowing on firefox

--- a/src/components/ItemListing/index.css
+++ b/src/components/ItemListing/index.css
@@ -32,6 +32,7 @@
 .item-listing-content {
   display: flex;
   flex-grow: 1;
+  max-height: calc(100% - 37px);
 }
 
 .item-listing-categories {
